--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@carbon/vue": "^2.35.0",
+    "autoprefixer": "^10.0.4",
     "core-js": "^3.6.5",
+    "postcss": "^8.1.10",
     "register-service-worker": "^1.7.1",
+    "tailwindcss": "^2.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
