--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@carbon/vue": "^2.35.0",
-    "autoprefixer": "^10.0.4",
+    "autoprefixer": "9",
     "core-js": "^3.6.5",
-    "postcss": "^8.1.10",
+    "postcss": "7",
     "register-service-worker": "^1.7.1",
-    "tailwindcss": "^2.0.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -43,6 +43,11 @@
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   },
   "lint-staged": {
     "*.{js,jsx,vue}": [
