--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@carbon/themes": "^10.23.0",
     "@carbon/vue": "^2.35.0",
     "autoprefixer": "9",
     "core-js": "^3.6.5",
+    "date-fns": "^2.16.1",
     "postcss": "7",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^2.6.11",
+    "vue-faker": "^3.0.0",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-module-configuration-composer": "^1.0.0",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
