--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@carbon/charts": "^0.41.10",
+    "@carbon/charts-vue": "^0.41.10",
+    "@carbon/icons-vue": "^10.22.0",
     "@carbon/themes": "^10.23.0",
     "@carbon/vue": "^2.35.0",
     "autoprefixer": "9",
     "core-js": "^3.6.5",
+    "d3": "5.x",
     "date-fns": "^2.16.1",
     "postcss": "7",
     "register-service-worker": "^1.7.1",
