--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "vue": "^2.6.11",
     "vue-faker": "^3.0.0",
     "vue-router": "^3.2.0",
+    "vue-web-cam": "^1.9.0",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.4.0",
     "vuex-module-configuration-composer": "^1.0.0",
     "vuex-persistedstate": "^4.0.0-beta.1"
