--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^2.6.11",
     "vue-faker": "^3.0.0",
+    "vue-lazyload": "^1.3.3",
+    "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
     "vue-web-cam": "^1.9.0",
     "vuelidate": "^0.7.6",
