--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^2.6.11",
+    "vue-event-manager": "^2.1.3",
     "vue-faker": "^3.0.0",
     "vue-lazyload": "^1.3.3",
     "vue-page-transition": "^0.2.2",
