--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-lazyload": "^1.3.3",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
+    "vue-toast-notification": "^0.6.1",
     "vue-web-cam": "^1.9.0",
     "vuelidate": "^0.7.6",
     "vuex": "^3.4.0",
