--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "vue-event-manager": "^2.1.3",
     "vue-faker": "^3.0.0",
     "vue-lazyload": "^1.3.3",
+    "vue-multiselect": "^2.1.6",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
     "vue-toast-notification": "^0.6.1",
     "vue-web-cam": "^1.9.0",
+    "vue2-timepicker": "^1.1.6",
     "vuelidate": "^0.7.6",
     "vuex": "^3.4.0",
     "vuex-module-configuration-composer": "^1.0.0",
