--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@carbon/motion": "^10.10.0",
     "@carbon/themes": "^10.23.0",
     "@carbon/vue": "^2.35.0",
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
+    "@fullcalendar/vue": "^5.5.0",
     "autoprefixer": "9",
     "core-js": "^3.6.5",
     "d3": "5.x",
