--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^2.6.11",
+    "vue-disable-autocomplete": "^0.0.4",
     "vue-event-manager": "^2.1.3",
     "vue-faker": "^3.0.0",
     "vue-lazyload": "^1.3.3",
