--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-lazyload": "^1.3.3",
     "vue-multiselect": "^2.1.6",
     "vue-page-transition": "^0.2.2",
+    "vue-phone-number-input": "^1.1.10",
     "vue-router": "^3.2.0",
     "vue-toast-notification": "^0.6.1",
     "vue-web-cam": "^1.9.0",
