--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "7",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "v-offline": "^1.3.0",
     "vue": "^2.6.11",
     "vue-disable-autocomplete": "^0.0.4",
     "vue-event-manager": "^2.1.3",
