--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.6.5",
     "d3": "5.x",
     "date-fns": "^2.16.1",
+    "libphonenumber-js": "^1.9.16",
     "postcss": "7",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
