--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-disable-autocomplete": "^0.0.4",
     "vue-event-manager": "^2.1.3",
     "vue-faker": "^3.0.0",
+    "vue-flatpickr-component": "^8",
     "vue-lazyload": "^1.3.3",
     "vue-multiselect": "^2.1.6",
     "vue-page-transition": "^0.2.2",
