--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "d3": "5.x",
     "date-fns": "^2.16.1",
     "libphonenumber-js": "^1.9.16",
+    "moment-timezone": "^0.5.33",
     "postcss": "7",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
