--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "7",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "v-mask": "^2.3.0",
     "v-offline": "^1.3.0",
     "vue": "^2.6.11",
     "vue-event-manager": "^2.1.3",
