--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
     "@vue/babel-preset-jsx": "^1.2.4",
     "autoprefixer": "9",
+    "caniuse-lite": "^1.0.30001296",
     "core-js": "^3.6.5",
     "currency.js": "^2.0.3",
     "date-fns": "^2.16.1",
@@ -71,7 +72,7 @@
     "geckodriver": "^1.20.0",
     "lint-staged": "^9.5.0",
     "moment-locales-webpack-plugin": "^1.2.0",
-    "node-sass": "^4.12.0",
+    "sass": "^1.46.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-test-attrs": "~0.1.5",
     "vue-template-compiler": "^2.6.11"
