--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "7",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "text-mask-addons": "^3.8.0",
     "v-mask": "^2.3.0",
     "v-offline": "^1.3.0",
     "vue": "^2.6.11",
