--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
     "@vue/babel-preset-jsx": "^1.2.4",
     "autoprefixer": "9",
+    "axios-extensions": "^3.1.3",
     "caniuse-lite": "^1.0.30001296",
     "core-js": "^3.6.5",
     "currency.js": "^2.0.3",
