--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios-extensions": "^3.1.3",
     "caniuse-lite": "^1.0.30001296",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "currency.js": "^2.0.3",
     "date-fns": "^2.16.1",
     "laue": "^0.2.1",
