--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "serve": "vue-cli-service serve --port 8083 --open",
     "build": "vue-cli-service build --skip-plugins @vue/cli-plugin-eslint",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "VUE_CLI_KEEP_TEST_ATTRS=true vue-cli-service test:e2e",
+    "test:e2e": "yarn cypress",
     "lint": "vue-cli-service lint",
-    "test:e2e:open": "vue-cli-service test:e2e --mode cypress"
-  },
-  "resolutions": {
-    "cypress": "^5.6.0"
+    "test:e2e:open": "yarn cypress open",
+    "e2e:verify": "cypress verify"
   },
   "dependencies": {
     "@carbon/icons-vue": "^10.22.0",
@@ -29,6 +27,7 @@
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "currency.js": "^2.0.3",
+    "cypress": "10.0.3",
     "date-fns": "^2.16.1",
     "laue": "^0.2.1",
     "libphonenumber-js": "^1.9.16",
@@ -58,8 +57,9 @@
     "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
+    "@cypress/vue": "^3.1.2",
+    "@cypress/webpack-dev-server": "^1.8.4",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -71,6 +71,7 @@
     "chai": "^4.1.2",
     "chromedriver": "86",
     "eslint": "^6.7.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.20.0",
     "lint-staged": "^9.5.0",
