create bill and tests

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve --port 8083 --open",
     "build": "vue-cli-service build --skip-plugins @vue/cli-plugin-eslint",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "yarn cypress",
+    "unit": "vue-cli-service test:unit",
+    "e2e": "yarn cypress",
     "lint": "vue-cli-service lint",
-    "test:e2e:open": "yarn cypress open",
+    "e2e:open": "yarn cypress open",
     "e2e:verify": "cypress verify"
   },
   "dependencies": {
@@ -70,6 +70,7 @@
     "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
     "chromedriver": "86",
+    "cypress-wait-until": "^1.7.2",
     "eslint": "^6.7.2",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^6.2.2",
