--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ geckodriver.log
 .env.*.local
 
 
-package-lock.json
-yarn.lock
+# package-lock.json
+# yarn.lock
 # Log files
 npm-debug.log*
 yarn-debug.log*
