--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
+  "engines": { "node": "16.x" },
   "lint-staged": {
     "*.{js,jsx,vue}": [
       "vue-cli-service lint",
